# openweather

./: .gitmodules  CMakeLists.txt  main.cpp
